--- a/style.css
+++ b/style.css
@@ -946,7 +946,6 @@ input{
 }
 
 
-/* fir large devices  */
 
 @media screen and (min-width: 768px){
     body{
@@ -1086,14 +1085,122 @@ input{
     .subscribe_input{
         padding: 0 .5rem;
     }
+
+    .footer_rights{
+        flex-direction: row;
+        justify-content: space-between;
+    }
+}
+
+/* fir large devices  */
+@media screen and (min-width: 1024){
+    .container{
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .home_container{
+        grid-template-columns: 2fr .5fr;
+    }
+
+    .home_info{
+        width: 328px;
+        grid-template-columns: 1fr 2fr;
+        column-gap: 2rem;
+    }
+
+    .home_info-title{
+        font-size: var(--normal-font-size);
+    }
+
+    .home_info-img{
+        width: 240px;
+    }
+
+    .about_img-one{
+        width: 240px;
+    }
+
+    .about_img-two{
+        width: 290px;
+    }
+
+    .discover_card{
+        width: 237px;
+    }
+
+    .discover_container{
+        width: 700px;
+    }
+
+    .discover_data{
+        left: 1.5rem;
+        bottom: 2rem;
+    }
+
+    .discover_title{
+        font-size: var(--h2-font-size);
+    }
+
+    .experience_content{
+        margin: var(--mb-1) 0;
+        column-gap: 3.5rem;
+    }
+
+    .experience_overlay:nth-child(1){
+        width: 463px;
+        margin-right: 7rem;
+    }
+
+    .experience_overlay:nth-child(2){
+        width: 220px;
+        top: 3rem;
+    }
+
+    .video_container{
+        grid-template-columns: .7fr;
+    }
+
+    .video_description{
+        padding: 0 8rem;
+    }
+
+    .place_container{
+        gap: 3rem 2rem;
+    }
+
+    .place_card,
+    .place_img{
+        height: 263px;
+    }
+
+    .footer_content{
+        justify-content: center;
+    }
+    
 }
 
 
+@media screen and (min-width: 1200px){
+    .container{
+        max-width: 1024px;
+    }
+    
+}
 
 
 /* for tall secreens on mobil desktop */
+@media screen and (min-height: 721px){
+    body{
+        margin: 0;
+    }
 
-
+    .home_container,
+    .home_img{
+        height: 640px;
+    }
+    
+}
 
 
 
