--- a/style.css
+++ b/style.css
@@ -178,6 +178,10 @@ input{
     outline: none;
 }
 
+.main{
+    overflow-x: hidden;
+}
+
 /* ========================= REUSABLE CSS CLASSES ============ */
 
 .section{
@@ -971,7 +975,7 @@ input{
 
     .nav_menu{
         display: flex;
-        column-gap: 1rem;
+        column-gap: 1rem; 
     }
     
     .nav_list{
@@ -1183,7 +1187,7 @@ input{
 
 @media screen and (min-width: 1200px){
     .container{
-        max-width: 1024px;
+        max-width: 1500px;
     }
     
 }
